# cutto

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .sourceignore  Dockerfile  README.md  Taskfile.yaml  docker-compose.yml  pyproject.toml
.github/actions/build-image/: action.yml
.github/workflows/: build-app.yml
backend/: Dockerfile  pyproject.toml
backend/project/: __init__.py  celery.py  sentry.py  settings.py
backend/shortener/: admin.py  apps.py  forms.py  models.py  receivers.py  tasks.py  urls.py  utils.py  views.py
backend/shortener/api/: serializers.py  urls.py  views.py
backend/shortener/migrations/: 0001_initial.py  0002_add_default_delete_links_task.py  0003_click_country_click_user_agent.py
backend/shortener/templates/shortener/: protected_link.html
deploy/: sealed-secrets-pub.pem
deploy/manifests/: backend.yaml  broker.yaml  db.yaml  frontend.yaml  ingress.yaml  kustomization.yaml  migrate.yaml  sealed-secret.yaml  worker.yaml
deploy/manifests/base/: backend.yaml  broker.yaml  frontend.yaml  kustomization.yaml  migrate.yaml  worker.yaml
deploy/manifests/development/: config.yaml  kustomization.yaml  sealed-secret.yaml  secret.enc.env
frontend/: .eslintrc.js  Caddyfile  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  LinkDone.jsx  LinkList.jsx  LinkListWrapper.jsx  NewLink.jsx  OwnerContext.js  ThemeProvider.jsx  Welcome.jsx  api.js  config.js  main.jsx  utils.js  validators.js
manifests/: namespace.yaml
project/: settings.py  urls.py
shortener/: admin.py  receivers.py  signals.py  views.py
shortener/migrations/: 0001_initial.py
(+15 files in other folders)
